[tool.poetry]
name = "ml_pipeline"
version = "0.1.0"
description = ""
authors = ["Marco <m.marthe@enlite.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pybind11 = "^2.13.5"
pybind11-stubgen = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.include]]
path = "build/my_pytorch.cpython-311-x86_64-linux-gnu.so"